--- a/src/main/webapp/app/exercises/shared/submission-export/submission-export-dialog.component.html
+++ b/src/main/webapp/app/exercises/shared/submission-export/submission-export-dialog.component.html
@@ -54,7 +54,7 @@
         </button>
         <button
             type="submit"
-            [disabled]="!submissionExportOptions.participantIdentifierList && !submissionExportOptions.exportAllParticipants && !exportInProgress"
+            [disabled]="(!submissionExportOptions.participantIdentifierList && !submissionExportOptions.exportAllParticipants) || exportInProgress"
             class="btn btn-default"
         >
             <span *ngIf="this.exportInProgress" class="mr-1"><fa-icon [icon]="'circle-notch'" spin="true"></fa-icon></span>
