--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -105,8 +105,13 @@
                 </div>
             </div>
         </ng-container>
-        <jhi-exam-participation-cover [startView]="false" [exam]="exam" *ngIf="isOver() && !examEndConfirmed" (onExamEnded)="onExamEndConfirmed()"></jhi-exam-participation-cover>
-        <jhi-exam-participation-summary *ngIf="isOver() && examEndConfirmed" [studentExam]="studentExam"></jhi-exam-participation-summary>
+        <jhi-exam-participation-cover
+            [startView]="false"
+            [exam]="exam"
+            *ngIf="isOver() && !studentExam.submitted"
+            (onExamEnded)="onExamEndConfirmed()"
+        ></jhi-exam-participation-cover>
+        <jhi-exam-participation-summary *ngIf="isOver() && studentExam.submitted" [studentExam]="studentExam"></jhi-exam-participation-summary>
     </ng-container>
     <ng-template #alert>
         <div class="d-flex my-2">
