--- a/src/main/webapp/app/course/dashboards/tutor-course-dashboard/tutor-course-dashboard.component.html
+++ b/src/main/webapp/app/course/dashboards/tutor-course-dashboard/tutor-course-dashboard.component.html
@@ -131,12 +131,12 @@
                         >
                         </jhi-tutor-participation-graph>
                     </td>
-                    <td>
+                    <td *ngIf="!isExamMode">
                         <span placement="right" [hidden]="!exercise.dueDate" ngbTooltip="{{ exercise.dueDate | artemisDate }}">
                             {{ exercise.dueDate | amTimeAgo }}
                         </span>
                     </td>
-                    <td>
+                    <td *ngIf="!isExamMode">
                         <span placement="right" [hidden]="!exercise.assessmentDueDate" ngbTooltip="{{ exercise.assessmentDueDate | artemisDate }}">
                             {{ exercise.assessmentDueDate | amTimeAgo }}
                         </span>
