show timer for grace period on end page

--- a/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.component.html
+++ b/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.component.html
@@ -1,4 +1,5 @@
-<div class="container d-flex flex-column align-items-center justify-content-center">
+<jhi-exam-timer class="float-right" *ngIf="!startView" [endDate]="graceEndDate" [criticalTime]="criticalTime"></jhi-exam-timer>
+<div class="container d-flex flex-column align-items-center justify-content-center float-right">
     <h2 style="text-align: center;" *ngIf="startView">
         <span>{{ 'artemisApp.examParticipation.greeting' | translate: { title: exam.title, fullName: accountName } }}</span>
     </h2>
