--- a/src/main/webapp/app/course/dashboards/tutor-course-dashboard/tutor-course-dashboard.component.html
+++ b/src/main/webapp/app/course/dashboards/tutor-course-dashboard/tutor-course-dashboard.component.html
@@ -16,6 +16,14 @@
             </h2>
         </div>
     </div>
+    <div *ngIf="isExamMode" class="row justify-content-between">
+        <div class="col-8">
+            <ul>
+                <li><span jhiTranslate="artemisApp.exam.endDate"> Exam End Date</span> : {{ exam.endDate | artemisDate }}</li>
+                <li><span jhiTranslate="artemisApp.exam.publishResultsDate"> Publish Results Date</span> : {{ exam.publishResultsDate | artemisDate }}</li>
+            </ul>
+        </div>
+    </div>
 </div>
 
 <jhi-alert></jhi-alert>
