--- a/src/main/webapp/app/exercises/shared/dashboards/tutor/tutor-exercise-dashboard.component.html
+++ b/src/main/webapp/app/exercises/shared/dashboards/tutor/tutor-exercise-dashboard.component.html
@@ -1,4 +1,4 @@
-<jhi-header-exercise-page-with-details [exercise]="exercise" [onBackClick]="back.bind(this)">
+<jhi-header-exercise-page-with-details [exercise]="exercise" [exam]="exam" [onBackClick]="back.bind(this)">
     <span pagetitle>{{ 'artemisApp.tutorExerciseDashboard.pageHeader' | translate }} {{ exercise?.title }}</span>
 </jhi-header-exercise-page-with-details>
 
