--- a/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.component.html
+++ b/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.component.html
@@ -1,7 +1,14 @@
 <jhi-exam-timer class="justify-content-end" *ngIf="!startView" [endDate]="graceEndDate" [criticalTime]="criticalTime"></jhi-exam-timer>
 <div class="container d-flex flex-column align-items-center justify-content-center">
     <h2 style="text-align: center;" *ngIf="startView">
-        <span>{{ 'artemisApp.examParticipation.greeting' | translate: { title: exam.title, fullName: accountName } }}</span>
+        <span>{{
+            'artemisApp.examParticipation.greeting'
+                | translate
+                    : {
+                          title: exam.title,
+                          fullName: accountName
+                      }
+        }}</span>
     </h2>
     <div><span style="display: table; margin-left: auto; margin-right: auto;" [innerHTML]="formattedGeneralInformation"></span></div>
     <div class="d-flex justify-content-center">
@@ -46,7 +53,7 @@
             </div>
         </div>
         <ng-container #startButton *ngIf="startView; else endButton">
-            <button [disabled]="!startButtonEnabled" type="submit" (click)="startExam()" class="btn btn-primary">
+            <button [disabled]="!startButtonEnabled || waitingForExamStart" type="submit" (click)="startExam()" class="btn btn-primary">
                 <span jhiTranslate="artemisApp.exam.startExam">Start Exam</span>
             </button>
         </ng-container>
