--- a/src/main/webapp/app/exam/manage/exam-management.component.html
+++ b/src/main/webapp/app/exam/manage/exam-management.component.html
@@ -112,7 +112,7 @@
                                     type="submit"
                                     [routerLink]="[exam.id, 'exercise-groups']"
                                     class="btn btn-primary btn-sm mr-1 mb-1 exercise-button"
-                                    id="exercises-button-{{ exam.id }}"
+                                    id="exercises-button-{{ exam.id }}-groups"
                                 >
                                     <fa-icon [icon]="'list-alt'"></fa-icon>
                                     <span class="d-none d-md-inline">{{ 'artemisApp.examManagement.exerciseGroups' | translate }}</span>
