add exam title on end view fix quiz submissions

--- a/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.component.html
+++ b/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.component.html
@@ -1,6 +1,6 @@
-<jhi-exam-timer class="justify-content-end" *ngIf="!startView" [endDate]="graceEndDate" [criticalTime]="criticalTime"></jhi-exam-timer>
+<jhi-exam-timer style="position: absolute; right: 10px;" class="justify-content-end" *ngIf="!startView" [endDate]="graceEndDate" [criticalTime]="criticalTime"></jhi-exam-timer>
 <div class="container d-flex flex-column align-items-center justify-content-center">
-    <h2 style="text-align: center;" *ngIf="startView">
+    <h2 style="text-align: center;" *ngIf="startView; else headerEndView">
         <span>{{
             'artemisApp.examParticipation.greeting'
                 | translate
@@ -10,6 +10,11 @@
                       }
         }}</span>
     </h2>
+    <ng-template #headerEndView>
+        <h2 style="text-align: center;">
+            {{ exam.title }}
+        </h2>
+    </ng-template>
     <div><span style="display: table; margin-left: auto; margin-right: auto;" [innerHTML]="formattedGeneralInformation"></span></div>
     <div class="d-flex justify-content-center">
         <input
