--- a/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.component.html
+++ b/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.component.html
@@ -1,7 +1,14 @@
 <div class="w-100 d-flex" *ngIf="!startView">
     <div class="col-md-3"></div>
     <h2 class="col-md-6" style="text-align: center;">
-        {{ exam.title }}
+        <span>{{
+            'artemisApp.examParticipation.finish'
+                | translate
+                    : {
+                          title: exam.title,
+                          fullName: accountName
+                      }
+        }}</span>
     </h2>
     <jhi-exam-timer class="col-md-3 justify-content-end" [endDate]="graceEndDate" [criticalTime]="criticalTime"></jhi-exam-timer>
 </div>
@@ -52,7 +59,7 @@
             </div>
             <div class="row justify-content-center">
                 <div class="form-group">
-                    <div class="alert alert-danger mt-1" *ngIf="falseName && inserted">
+                    <div class="alert alert-danger mt-1" *ngIf="!nameIsCorrect && inserted">
                         <span [innerHTML]="'artemisApp.exam.falseName' | translate"></span>
                     </div>
                 </div>
