--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -1,8 +1,9 @@
 <ng-container *ngIf="exam">
     <jhi-exam-participation-cover
+        *ngIf="isVisible() && !isOver() && !examStartConfirmed"
         [startView]="true"
         [exam]="exam"
-        *ngIf="isVisible() && !isOver() && !examStartConfirmed"
+        [studentExam]="studentExam"
         (onExamStarted)="examStarted($event)"
     ></jhi-exam-participation-cover>
 
@@ -105,8 +106,14 @@
                 </div>
             </div>
         </ng-container>
-        <jhi-exam-participation-cover [startView]="false" [exam]="exam" *ngIf="isOver() && !examEndConfirmed" (onExamEnded)="onExamEndConfirmed()"></jhi-exam-participation-cover>
-        <jhi-exam-participation-summary *ngIf="isOver() && examEndConfirmed" [studentExam]="studentExam"></jhi-exam-participation-summary>
+        <jhi-exam-participation-cover
+            *ngIf="isOver() && !studentExam.submitted"
+            [startView]="false"
+            [exam]="exam"
+            [studentExam]="studentExam"
+            (onExamEnded)="onExamEndConfirmed()"
+        ></jhi-exam-participation-cover>
+        <jhi-exam-participation-summary *ngIf="isOver() && studentExam.submitted" [studentExam]="studentExam"></jhi-exam-participation-summary>
     </ng-container>
     <ng-template #alert>
         <div class="d-flex my-2">
