Move examResultsPublished into extra method in exercise.model.ts and refactored all corresponding files

--- a/src/main/webapp/app/exam/participate/summary/exercises/quiz-exam-summary/quiz-exam-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exercises/quiz-exam-summary/quiz-exam-summary.component.html
@@ -6,7 +6,7 @@
             [question]="question"
             [(selectedAnswerOptions)]="selectedAnswerOptions[question.id]"
             [clickDisabled]="true"
-            [showResult]="exercise.examResultsPublished"
+            [showResult]="examResultsPublished"
             [submittedQuizExercise]="exercise"
             [submittedResult]="exercise.studentParticipations[0].results[0]"
             [forceSampleSolution]="false"
@@ -19,7 +19,7 @@
             [question]="question"
             [(mappings)]="dragAndDropMappings[question.id]"
             [clickDisabled]="true"
-            [showResult]="exercise.examResultsPublished"
+            [showResult]="examResultsPublished"
             [forceSampleSolution]="false"
             [questionIndex]="i + 1"
             [score]="getScoreForQuizQuestion(question.id)"
@@ -30,7 +30,7 @@
             [question]="question"
             [(submittedTexts)]="shortAnswerSubmittedTexts[question.id]"
             [clickDisabled]="true"
-            [showResult]="exercise.examResultsPublished"
+            [showResult]="examResultsPublished"
             [forceSampleSolution]="false"
             [questionIndex]="i + 1"
             [score]="getScoreForQuizQuestion(question.id)"
