--- a/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
@@ -19,7 +19,7 @@
                 &nbsp;<fa-icon [icon]="getIcon(exercise.type)"></fa-icon>&nbsp;
                 <span jhiTranslate="artemisApp.exam.exercise" [translateValues]="{ nr: i + 1 }">Exercise {{ i + 1 }}</span>
             </h5>
-            <div *ngIf="exercise.examResultsPublished">
+            <div *ngIf="getExamResultsPublished(exercise)">
                 <jhi-result [participation]="exercise.studentParticipations[0]"></jhi-result>
             </div>
             <button
@@ -32,7 +32,7 @@
             </button>
         </div>
         <div class="card-body question-card-body" [ngbCollapse]="isCollapsed(exercise.id)">
-            <div *ngIf="exercise.type !== QUIZ && exercise.type !== PROGRAMMING && exercise.examResultsPublished">
+            <div *ngIf="exercise.type !== QUIZ && exercise.type !== PROGRAMMING && getExamResultsPublished(exercise)">
                 <button class="btn btn-primary float-right" [routerLink]="generateLink(exercise)">
                     <fa-icon [icon]="'folder-open'" [fixedWidth]="true"></fa-icon><span jhiTranslate="artemisApp.exam.examSummary.viewResult">&nbsp;View Result</span>
                 </button>
