Fix timer positioning

--- a/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
+++ b/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
@@ -54,7 +54,12 @@
                 </button>
             </div>
             <div class="ml-3 mb-2">
-                <jhi-exam-timer class="d-flex justify-content-end" [criticalTime]="criticalTime" [endDate]="endDate" (timerAboutToEnd)="triggerExamAboutToEnd()"></jhi-exam-timer>
+                <jhi-exam-timer
+                    class="d-flex justify-content-end mx-0"
+                    [criticalTime]="criticalTime"
+                    [endDate]="endDate"
+                    (timerAboutToEnd)="triggerExamAboutToEnd()"
+                ></jhi-exam-timer>
             </div>
         </div>
     </div>
