--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -112,6 +112,7 @@
             [startView]="false"
             [exam]="exam"
             [studentExam]="studentExam"
+            [aborted]="aborted"
             (onExamEnded)="onExamEndConfirmed()"
             (onExamContinueAfterAbort)="toggleAbort()"
         ></jhi-exam-participation-cover>
