Remove unnecessary aborted condition

--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -108,7 +108,7 @@
             </div>
         </ng-container>
         <jhi-exam-participation-cover
-            *ngIf="(isOver() && !studentExam.submitted) || aborted"
+            *ngIf="isOver() && !studentExam.submitted"
             [startView]="false"
             [exam]="exam"
             [studentExam]="studentExam"
