--- a/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.component.html
+++ b/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.component.html
@@ -77,8 +77,11 @@
             </button>
         </ng-container>
         <ng-template #endButton>
+            <div *ngIf="aborted" class="mb-2 font-weight-bold text-danger">
+                {{ 'artemisApp.examParticipation.handInEarlyNotice' | translate }}
+            </div>
             <button [disabled]="!endButtonEnabled" type="submit" (click)="submitExam()" class="btn btn-primary">
-                <span jhiTranslate="artemisApp.exam.endExam">End Exam</span>
+                <span jhiTranslate="artemisApp.exam.endExam">Finish</span>
             </button>
         </ng-template>
         <div *ngIf="aborted" class="mt-5">
