--- a/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
+++ b/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
@@ -49,8 +49,8 @@
                 <button [class.invisible]="isProgrammingExercise()" class="btn btn-primary" (click)="saveExercise()">
                     {{ 'artemisApp.examParticipation.' + (exerciseIndex >= exercises.length - 1 ? 'submitLastExercise' : 'submitOtherExercise') | translate }}
                 </button>
-                <button class="btn btn-danger ml-2" (click)="abort()">
-                    {{ 'artemisApp.examParticipation.abort' | translate }}
+                <button class="btn btn-danger ml-2" (click)="handInEarly()">
+                    {{ 'artemisApp.examParticipation.handInEarly' | translate }}
                 </button>
             </div>
             <div class="ml-3 mb-2">
