--- a/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
@@ -19,6 +19,9 @@
                 &nbsp;<fa-icon [icon]="getIcon(exercise.type)"></fa-icon>&nbsp;
                 <span jhiTranslate="artemisApp.exam.exercise" [translateValues]="{ nr: i + 1 }">Exercise {{ i + 1 }}</span>
             </h5>
+            <div *ngIf="getExamResultsPublished(exercise)">
+                <jhi-result [participation]="exercise.studentParticipations[0]"></jhi-result>
+            </div>
             <button
                 class="btn btn-light question-collapse"
                 (click)="toggleCollapseExercise(exercise.id)"
@@ -29,6 +32,11 @@
             </button>
         </div>
         <div class="card-body question-card-body" [ngbCollapse]="isCollapsed(exercise.id)">
+            <div *ngIf="exercise.type !== QUIZ && exercise.type !== PROGRAMMING && getExamResultsPublished(exercise)">
+                <button class="btn btn-primary float-right" [routerLink]="generateLink(exercise)">
+                    <fa-icon [icon]="'folder-open'" [fixedWidth]="true"></fa-icon><span jhiTranslate="artemisApp.exam.examSummary.viewResult">&nbsp;View Result</span>
+                </button>
+            </div>
             <h5>{{ exercise.title }} [{{ exercise.maxScore }}p]</h5>
             <h6 right-body class="markdown-preview" *ngIf="exercise.problemStatement && exercise.type !== PROGRAMMING">
                 <span [innerHTML]="exercise.problemStatement! | htmlForMarkdown"></span>
