--- a/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.component.html
+++ b/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.component.html
@@ -77,10 +77,22 @@
             </button>
         </ng-container>
         <ng-template #endButton>
+            <div *ngIf="handInEarly" class="mb-2 font-weight-bold text-danger">
+                {{ 'artemisApp.examParticipation.handInEarlyNotice' | translate }}
+            </div>
             <button [disabled]="!endButtonEnabled" type="submit" (click)="submitExam()" class="btn btn-primary">
-                <span jhiTranslate="artemisApp.exam.endExam">End Exam</span>
+                <span jhiTranslate="artemisApp.exam.endExam">Finish</span>
             </button>
         </ng-template>
+        <div *ngIf="handInEarly" class="mt-5">
+            <div class="mb-2 font-weight-bold">
+                {{ 'artemisApp.examParticipation.continueAfterHandInEarlyDescription' | translate }}
+            </div>
+            <button class="btn btn-secondary mt-2" (click)="continueAfterHandInEarly()">
+                <fa-icon [icon]="'arrow-left'"></fa-icon>
+                {{ 'artemisApp.examParticipation.continueAfterHandInEarly' | translate }}
+            </button>
+        </div>
     </div>
     <div class="exam-waiting-for-start-overlay alert alert-info" *ngIf="waitingForExamStart">
         <span>{{ 'artemisApp.examParticipation.waitForStart' | translate: { title: exam.title } }}</span>
