--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -17,6 +17,7 @@
                 [endDate]="individualStudentEndDate"
                 (onExerciseChanged)="onExerciseChange($event)"
                 (examAboutToEnd)="examEnded()"
+                (onExamHandInEarly)="toggleHandInEarly()"
             ></jhi-exam-navigation-bar>
             <div class="d-flex justify-content-center mt-2 mb-4">
                 <jhi-alert></jhi-alert>
@@ -111,7 +112,9 @@
             [startView]="false"
             [exam]="exam"
             [studentExam]="studentExam"
+            [handInEarly]="handInEarly"
             (onExamEnded)="onExamEndConfirmed()"
+            (onExamContinueAfterHandInEarly)="toggleHandInEarly()"
         ></jhi-exam-participation-cover>
         <jhi-exam-participation-summary *ngIf="isOver() && studentExam.submitted" [studentExam]="studentExam"></jhi-exam-participation-summary>
     </ng-container>
