--- a/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
@@ -64,7 +64,7 @@
                     <jhi-file-upload-exam-summary [submission]="getSubmissionForExercise(exercise)"></jhi-file-upload-exam-summary>
                 </ng-container>
                 <jhi-complaint-interactions
-                    *ngIf="getSubmissionForExercise(exercise) && studentExam.exam.examStudentReviewStart && studentExam.exam.examStudentReviewEnd"
+                    *ngIf="getSubmissionForExercise(exercise) && exercise.type != QUIZ && studentExam.exam.examStudentReviewStart && studentExam.exam.examStudentReviewEnd"
                     class="mb-2 mt-2 ml-3"
                     [exercise]="exercise"
                     [participation]="getParticipationForExercise(exercise)"
